# study-hybrid-search-vertex

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  cloudbuild.api.yaml  cloudbuild.training.yaml  doppler.yaml  pyproject.toml
.github/actions/build-and-push/: action.yml
.github/actions/setup-gcp/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: README.md  ci.yml  deploy-api.yml  deploy-dataform.yml  deploy-embedding-job.yml  deploy-encoder-image.yml  deploy-pipeline.yml  deploy-reranker-image.yml  deploy-trainer-image.yml  deploy-training-job.yml  terraform.yml
app/: Dockerfile  README.md  pyproject.toml
app/src/app/: config.py
app/src/app/adapters/: __init__.py  cache_store.py  candidate_retriever.py  lexical_search.py  model_store.py  publisher.py  retrain.py  training_job.py  vertex_prediction.py
app/src/app/entrypoints/: api.py
app/src/app/middleware/: __init__.py  request_logging.py
app/src/app/ports/: __init__.py  cache_store.py  candidate_retriever.py  encoder_client.py  lexical_search.py  model_store.py  publisher.py  reranker_client.py  retrain_queries.py  training_job_runner.py
app/src/app/schemas/: __init__.py  search.py
app/src/app/services/: model_store.py  ranking.py  retrain_policy.py
app/tests/: conftest.py  test_adapters.py  test_bq_retrain_queries.py  test_cache_store.py  test_check_retrain_endpoint.py  test_events_retrain.py  test_logging_middleware.py  test_publisher.py  test_ranking_service.py  test_retrain.py  test_search_api.py
common/: pyproject.toml
common/src/common/: __init__.py  config.py  feature_engineering.py  run_id.py
common/src/common/adapters/: __init__.py  bigquery_embedding_store.py
common/src/common/embeddings/: __init__.py  e5_encoder.py
common/src/common/logging/: __init__.py  structured_logging.py
common/src/common/ports/: __init__.py  embedding_store.py
common/src/common/ranking/: __init__.py  label_gain.py  metrics.py
common/src/common/schema/: __init__.py  feature_schema.py
common/src/common/storage/: __init__.py  gcs_artifact_store.py
common/tests/: test_feature_engineering_ranker.py  test_gcs.py  test_gcs_io.py  test_label_gain.py  test_logging.py  test_ranking_metrics.py  test_run_id.py
definitions/: README.md
definitions/assertions/: property_features_freshness.sqlx  property_features_quality.sqlx
definitions/features/: property_features_daily.sqlx
definitions/monitoring/: ranking_rank_diff_daily.sqlx
definitions/sources/: feedback_events_raw.sqlx  properties_raw.sqlx  search_logs_raw.sqlx
definitions/staging/: properties_cleaned.sqlx
docs/: 01_仕様と設計.md  02_移行ロードマップ.md  03_実装カタログ.md  04_運用.md  README.md
docs/教育資料/: 01_スライド.md  02_ナレーション台本.md  03_デモシナリオ.md  04_デモナレーション台本.md  05_図解.md
docs/教育資料/制作メモ/: 01_構成タイムライン.md  02_スライド要約.md  03_ナレーション要約.md  04_デモ進行メモ.md  05_図解抜粋.md
env/config/: setting.yaml
env/secret/: README.md
functions/: __init__.py
functions/pipeline_trigger/: __init__.py  main.py  requirements.txt
infra/: .gitignore  .terraform.lock.hcl  README.md  apis.tf  backend.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
infra/modules/data/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/meilisearch/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/monitoring/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/runtime/: main.tf  outputs.tf  variables.tf
infra/modules/vertex/: main.tf  outputs.tf  variables.tf  versions.tf
jobs/: Dockerfile  README.md  pyproject.toml
jobs/containers/encoder/: Dockerfile
jobs/containers/reranker/: Dockerfile
jobs/containers/trainer/: Dockerfile
jobs/src/meili_sync/entrypoints/: sync_cli.py
jobs/src/training/: config.py
jobs/src/training/adapters/: __init__.py  artifact_store.py  bigquery_ranker_repository.py  embedding_writer.py  experiment_tracker.py  repository.py
jobs/src/training/entrypoints/: embed_cli.py  encoder_server.py  rank_cli.py  reranker_server.py
jobs/src/training/ports/: __init__.py  artifact_uploader.py  experiment_tracker.py  ranker_repository.py
jobs/src/training/services/: embedding_runner.py  rank_trainer.py  ranking_metrics.py
jobs/tests/: test_bigquery_ranker_repository.py  test_embedding_runner.py  test_rank_cli_run.py  test_rank_trainer.py
monitoring/: README.md  validate_feature_skew.sql
pipelines/: pyproject.toml
pipelines/src/pipelines/: __init__.py
pipelines/src/pipelines/property_search/: __init__.py  compile.py  embed_pipeline.py  train_pipeline.py
pipelines/src/pipelines/property_search/components/: __init__.py  batch_predict_embeddings.py  evaluate.py  load_features.py  load_properties.py  register_reranker.py  train_reranker.py  vizier.py  write_embeddings.py
pipelines/tests/: test_compile.py
scripts/: README.md  _common.py
scripts/checks/: layers.py
scripts/config/: sync_dataform.py
scripts/deploy/: api_local.py  training_job_local.py
scripts/ops/: check_retrain.py  feedback_check.py  livez_check.py  promote.py  ranking_check.py  search_check.py  training_label_seed.py
scripts/setup/: create_schedule.py  deploy_all.py  destroy_all.py  doctor.py  print_github_variables.py  seed_minimal.py  seed_minimal_clean.py  setup_encoder_endpoint.py  setup_model_monitoring.py  tf_bootstrap.py  tf_init.py  tf_plan.py  upload_encoder_assets.py
scripts/sql/: bq_scan_top.sql  runs_recent.sql  search_volume.sql  skew_latest.sql
tests/: test_pipeline_compile.py  test_vertex_setup_scripts.py
tests/arch/: test_import_boundaries.py
tests/functions/: test_pipeline_trigger.py
tests/infra/: test_infra_ranker_tables.py  test_terraform_module_structure.py  test_workflows_structure.py
tests/parity/: test_dataform_workflow_settings.py  test_feature_parity_feature_group.py  test_feature_parity_ranking.py  test_feature_parity_sql_ranker.py
