[project]
name = "study-gcp-mlops-bq-first"
version = "0.1.0"
description = "bq-first MLOps pipeline (California Housing × LightGBM)"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["common", "app", "jobs"]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-requests",
    # httpx powers fastapi.testclient (starlette); needed by app/tests.
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# UP017: keep `timezone.utc` so code imports cleanly on 3.10/3.11 local envs (target is 3.12).
# RUF012: SEVERITY_MAP on CloudLoggingJsonFormatter is intentionally class-level constant.
ignore = ["E501", "UP017", "RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["common/tests", "app/tests", "jobs/tests", "tests"]
pythonpath = [".", "common/src", "app/src", "jobs/src"]
addopts = "-ra --strict-markers"
