[project]
name = "jobs"
version = "0.1.0"
description = "Cloud Run Jobs — LightGBM training"
requires-python = ">=3.12"
dependencies = [
    "common",
    "fastapi>=0.115",
    "google-auth>=2.36",
    "google-cloud-aiplatform>=1.71",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "pandas>=2.2",
    "sentence-transformers>=3.0",
    "uvicorn[standard]>=0.30",
    "wandb>=0.17",
]

[project.scripts]
rank-train = "training.entrypoints.rank_cli:main"
embed = "training.entrypoints.embed_cli:main"
meili-sync = "meili_sync.entrypoints.sync_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/training", "src/meili_sync"]
