[project]
name = "pipelines"
version = "0.1.0"
description = "Vertex AI Pipelines — property search embedding and reranker training"
requires-python = ">=3.12"
dependencies = [
    "common",
    "jobs",
    "google-cloud-aiplatform>=1.71",
    "google-cloud-pipeline-components>=2.17",
    "kfp>=2.9,<3",
]

[project.scripts]
compile-pipelines = "pipelines.property_search.compile:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipelines"]
